--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,19 @@
 asgiref==3.11.0
+colorama==0.4.6
+coverage==7.13.1
 Django==6.0
 django-cors-headers==4.9.0
 djangorestframework==3.16.1
+Faker==40.1.0
 gunicorn==23.0.0
+iniconfig==2.3.0
 packaging==25.0
+pluggy==1.6.0
 psycopg2-binary==2.9.11
+Pygments==2.19.2
+pytest==9.0.2
+pytest-cov==7.0.0
+pytest-django==4.11.1
 python-decouple==3.8
 python-dotenv==1.2.1
 sqlparse==0.5.5
