--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,8 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0"
   },
@@ -37,8 +37,8 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "babel-jest": "^30.2.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
